--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /EfcoreOperation/.vs/EfcoreOperation/FileContentIndex/8dfa166e-7587-42ca-a530-c446c1bf014b.vsidx
+*.vsidx
