--- a/EfcoreOperation/EfcoreOperation/appsettings.json
+++ b/EfcoreOperation/EfcoreOperation/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "AppDbConnectionString": "Server=.;Database=SampleEfCore; Integrated Security=true;TrustedServerCertificate=true;"
+  }
 }
